# plotlang

./: CMakeLists.txt  README.md
include/: list.h  parser.h  scanner.h  semantics.h
src/: CMakeLists.txt  main.c
src/parser/: parser.c  parser.y
src/scanner/: CMakeLists.txt  scanner.c  scanner.l
src/semantics/: list.c  semantics.c
test/: CMakeLists.txt  in1.txt  in2.txt  in3.txt  in4.txt
test/parser/: test.c
test/scanner/: CMakeLists.txt  test.c
